fix some alignments and stuff

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -19,3 +19,7 @@ footer {
     height: 2em;
   }
 }
+
+.remember-me-label {
+  margin-top: 0.5em;
+}
